# LTL_Solver_Backend

./: CMakeLists.txt  Fast LTL Satisfiability Checking by SAT Solvers.docx  README.md
include/: Automaton.h  Constants.h  Formula.h  Literal.h  NormalForm.h  Notations.h  Obligation.h  ObligationFormula.h  ObligationSet.h  OlgChecker.h  Operator.h  Parser.h  ServerHandler.h  Solver.h  State.h  TransitionsSystem.h  Utilities.h  WeakSatisfactionChecker.h
src/: Automaton.cpp  Formula.cpp  Literal.cpp  NormalForm.cpp  Notations.cpp  Obligation.cpp  ObligationFormula.cpp  ObligationSet.cpp  OlgChecker.cpp  Operator.cpp  Parser.cpp  ServerHandler.cpp  Solver.cpp  State.cpp  TransitionsSystem.cpp  Utilities.cpp  WeakSatisfactionChecker.cpp  main.cpp
